# django-measurement

./: .gitignore  .hgtags  .travis.yml  MANIFEST  MANIFEST.in  README.rst  pytest.ini  readme.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
django_measurement/: admin.py  backports.py  base.py  conf.py  fields.py  forms.py  measure.py  models.py  rest_framework.py  runtests.py  tests.py  utils.py  validators.py
docs/: Makefile  conf.py  index.rst
docs/topics/: admin_integration.rst  forms.rst  installation.rst  measures.rst  settings.rst  storing.rst  use.rst
tests/: autocomplete_urls.py  conftest.py  custom_measure_base.py  forms.py  models.py  settings.py  test_autocomplete.py  test_fields.py  urls.py  views.py
tests/testapp/: admin.py  forms.py  manage.py  models.py  settings.py  urls.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/testapp/: measurementtestmodel_form.html
