[metadata]
name = django-measurement
author = Adam Coddington
author-email = me@adamcoddington.net
summary = Convenient fields and classes for handling measurements
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/coddingtonbear/django-measurement
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django

[files]
packages =
    django_measurement

[pbr]
skip_authors = true
skip_changelog = true

[build_sphinx]
source-dir = docs
build-dir = docs/_build
warning-is-error = 1

[tool:pytest]
norecursedirs=env docs .tox .eggs
DJANGO_SETTINGS_MODULE=tests.settings
addopts = --tb=short -rxs

[flake8]
max-line-length = 99
max-complexity = 10
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*,.tox/*,.eggs/*

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
multi_line_output = 5
line_length = 79
combine_as_imports = true
skip = wsgi.py,docs,env,.tox,.eggs
known_first_party = django_measurement,tests
known_third_party = django
