[metadata]
name = django-measurement
author = Adam Coddington
author_email = me@adamcoddington.net
description = Convenient fields and classes for handling measurements
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/coddingtonbear/django-measurement
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0

    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Localization

keywords =
    measurement
    django

[options]
packages = find:
install_requires =
    django>=2.2
    django-appconf>=1.0.2
    measurement>=1.6,<4.0
    djangorestframework>=3.12.4
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[aliases]
test = pytest

[tool:pytest]
norecursedirs=env docs .tox .eggs
DJANGO_SETTINGS_MODULE=tests.settings
addopts =
    --doctest-glob='*.rst'
    --doctest-modules
    --cov=django_measurement

[coverage:report]
show_missing = True

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = venv,.tox,.eggs

[pydocstyle]
add-ignore = D1

[isort]
atomic = true
line_length = 88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_first_party = django_measurement, tests
default_section=THIRDPARTY
combine_as_imports = true
